create and view tickets with authorized role access implemented